--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>FourTwenty • The Archive</title>
-  <meta name="description" content="">
+  <meta name="description" content="Core System :: Ledger">
 
   <!-- Push context BEFORE GTM so page_view can include it -->
   <script>
