--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <section class="hero">
     <div>
-      <h1 style="margin:0 0 8px"></h1>
+      <h1 style="margin:0 0 8px">Immutable ledger + snapshots</h1>
       <p class="muted">A tiny site + playground that pushes PII-free events into <code>dataLayer</code>. Map in GTM, verify in GA4 DebugView, and iterate on your taxonomy.</p>
       <div class="grid">
         <a class="btn" href="#" onclick="signalClick('cta_get_started','Get Started','hero');return false;">Trigger CTA event</a>
