--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     ───────────────────────────────────
     Purpose
       • Present a calm, systems-grade dashboard "face" for the Archive (🫀)
-      • Read registry.yaml (+ light validation) to compute integrity KPIs
+      • Read registry.yml (+ light validation) to compute integrity KPIs
       • Render README.md for human context
       • Link out to the lifeblood seeds (glossary.yml, tags.yml) in the hub repo
 
